# frank-assistant-ia

./: .gitignore  CONTRIBUTING.md  FRANK IA.lnk  FRANK IANOT LAUNCH.lnk  LICENSE.txt  README.md  ROADMAP.md  pyproject.toml  requirements.txt  start_max.ps1  update_requirements.bat
data/: long_term.jsonl
data/vector_store/: index.faiss  meta.jsonl
scripts/: run.py
src/max_assistant_v2/: pyproject.toml
src/max_assistant_v2/agents/: executor_agent.py  planner_agent.py
src/max_assistant_v2/config/: identity.py  paths.py  settings.py
src/max_assistant_v2/core/: agenda_manager.py  agenda_reminder.py  assistant.py  behavior_analyzer.py  data_manager.py  main_logic.py  orchestrator.py  project_manager.py  router.py
src/max_assistant_v2/data/: agenda.json
src/max_assistant_v2/llm/: lmstudio_client.py
src/max_assistant_v2/memory/: embeddings.py  long_term.py  memory_writer.py  profile.json  profile.py  short_term.py  vector_store.py
src/max_assistant_v2/stt/: whisper_engine.py
src/max_assistant_v2/tools/: camera_tools.py  image_tools.py  memory_dashboard_tool.py  system_reset_tools.py  system_tools.py  tool_registry.py  web_tools.py  webcam_tools.py
src/max_assistant_v2/tts/: piper_engine.py
src/max_assistant_v2/ui/: console_hud.py  hud.py  memory_dashboard.py
src/max_assistant_v2/utils/: logger.py
src/max_assistant_v2/web/: 192.168.1.15-key.pem  192.168.1.15.pem  install-key.pem  install.pem  server.py
src/max_assistant_v2/web/static/: index.html  manifest.json  service-worker.js
src/scripts/: run_assistant.py
